prost-reflect-derive/tests/attr_unknown_field.stderr
error: unknown argument (expected 'descriptor_pool', 'file_descriptor_set_bytes' or 'message_name')
 --> tests/attr_unknown_field.rs:4:17
  |
4 | #[prost_reflect(foo = 123)]
  |                 ^^^
